# webcam_CUDA

./: .gitignore  CMakeLists.txt  cam.c  capture_camera.c  conversion.c  conversion_CUDA.cu  globals.c  hello.cu  image_manipulation.cu  interface.c  main.c  main.cu  rotation.cu  wrappers.cu
include/: capture_camera.h  conversion.h  conversion_CUDA.cuh  globals.h  image_manipulation.cuh  interface.h  rotation.cuh  wrappers.cuh
